--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@faker-js/faker": "^9.4.0",
     "@types/react-icons": "^2.2.7",
     "clsx": "^2.1.1",
     "framer-motion": "12.0.6",
